--- a/web/themes/custom/realm/assets/css/unify-core.css
+++ b/web/themes/custom/realm/assets/css/unify-core.css
@@ -11,6 +11,10 @@
   opacity: 1;
 }
 
+#toolbar-administration {
+  padding: 39px 0 0 0;
+}
+
 /*------------------------------------
   Default Styles
 ------------------------------------*/
