--- a/web/themes/custom/realm/assets/css/unify-globals.css
+++ b/web/themes/custom/realm/assets/css/unify-globals.css
@@ -15,6 +15,10 @@
   opacity: 1;
 }
 
+#toolbar-administration {
+  padding: 39px 0 0 0;
+}
+
 /* Text */
 .g-word-break {
   word-wrap: break-word;
