--- a/web/themes/custom/realm/assets/include/scss/custom/_custom.mixins.scss
+++ b/web/themes/custom/realm/assets/include/scss/custom/_custom.mixins.scss
@@ -20,3 +20,7 @@
 .u-header [aria-labelledby] {
   opacity: 1;
 }
+
+#toolbar-administration{
+  padding: 39px 0 0 0;
+}
